cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 20)

function(m68k_create_test TEST_NAME)
    add_executable(test_${TEST_NAME} test_${TEST_NAME}.cpp)
    target_compile_options(test_${TEST_NAME} PRIVATE -Wall -Wextra -Wpedantic -ggdb)
    target_link_libraries(test_${TEST_NAME} PRIVATE m68k-emu -static-libgcc -static-libstdc++)
    add_test(${TEST_NAME} test_${TEST_NAME})
endfunction()

include(CTest)
m68k_create_test(memory)
m68k_create_test(addressing)
m68k_create_test(disassembler)
m68k_create_test(cpu_step)
m68k_create_test(bubblesort)
m68k_create_test(fibonacci)
m68k_create_test(benchmark)
m68k_create_test(in_move)
m68k_create_test(in_moveq)
m68k_create_test(in_lea)
m68k_create_test(in_add)
m68k_create_test(in_adda)
m68k_create_test(in_addx)
m68k_create_test(in_addi)
m68k_create_test(in_addq)
m68k_create_test(in_sub)
m68k_create_test(in_suba)
m68k_create_test(in_subx)
m68k_create_test(in_subi)
m68k_create_test(in_subq)
m68k_create_test(in_mul)
m68k_create_test(in_div)
m68k_create_test(in_nop)
m68k_create_test(in_jmp)
m68k_create_test(in_jsr_rts)
m68k_create_test(in_link_unlk)
m68k_create_test(in_ext)
m68k_create_test(in_bcc)
m68k_create_test(in_scc)
m68k_create_test(in_bit_manip)
